[tool.black]
line-length=100
target-version=["py39"]

[tool.isort]
profile = "black"
atomic=true
line_length = 100
lines_after_imports=2
lines_between_types=1
known_third_party=[
    "pytest",
    "click",
]
known_first_party=["drift-backend"]

[tool.coverage.run]
branch = false
source = ["drift-backend"]
omit = ["drift-backend/tests/*",]

[tool.coverage.paths]
source = ["drift-backend/"]

[tool.coverage.report]
fail_under = 73
skip_covered = true
show_missing = true

[tool.pytest.ini_options]
minversion = "6.2.1"
addopts = "-s --tb=native --cov=."
testpaths = "./tests"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning'
    ]

[tool.poetry]
name = "drift-backend"
version = "0.1.0"
description = ""
authors = []
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
connexion = {extras = ["swagger-ui", "flask", "uvicorn"], version = "*"}
Flask = "*"
gunicorn = "*"
prometheus_client = "*"
watchtower = "*"
python-dateutil = "*"
unleashclient = "*"
kerlescan = {git = "https://github.com/RedHatInsights/kerlescan.git", rev = "0.119", develop = true}
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "*"}
flake8 = "*"
mock = "*"
pytest = "*"
pytest-cov = "*"
pytest-flask = "*"
pytest-black = "*"
pytest-mock = "*"
responses = "*"
yamllint = "*"
black = "*"
ipython = "*"
openapi-spec-validator = "*"
ipdb = "*"
toml = "*"
tomli = "*"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
